[Feature]加入了生成二维码和识别二维码转账
Signed-off-by: Yang Tao <yangtao@tik.com>

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -123,5 +123,7 @@ dependencies {
     // 구글 guava
     implementation 'com.google.guava:guava:23.0-android'
 
+    implementation 'cn.yipianfengye.android:zxing-library:2.2'
+
     testImplementation "junit:junit:${junitVer}"
 }
